--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,15 @@ language: go
 
 go:
         - 1.12
+
+git:
+        depth: 1
+
+install: true
+
+before_script:
+        - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+
+script:
+        - golangci-lint run
+        - go build -v ./...
