--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ git:
 install: true
 
 before_script:
-        - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+        - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s latest
 
 script:
         - golangci-lint run
