--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,7 @@ git:
 
 install: true
 
-before_script:
-        - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s latest
-
 script:
-        - golangci-lint run
-        - go build -v ./...
+        - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s latest
+        - go build -v ./pkg/device42/getPass.go
+        - go build -v ./cmd/d42-password/main.go
