--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install: true
 
 script:
         - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s latest
-        - go build -v ./pkg/device42/getPass.go
+        - go install -v ./pkg/device42/getPass.go
         - go build -v ./cmd/d42-password/main.go
