--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ go:
 git:
         depth: 1
 
-install: true
+install:
+        - go get github.com/qcu87z/device42-go/pkg/device42
 
 script:
         - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s latest
 #        - go install -v ./pkg/device42/getPass.go
-        - go build -v ./pkg/device42/ ./cmd/d42-password/
+        - go build -v ./cmd/d42-password/main.go
