--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ install:
 
 script:
         - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s latest
-        - go get -t -v ./...
+#        - go get -t -v ./...
         - go build -v ./cmd/d42-password/main.go
