--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ go:
 git:
         depth: 1
 
-install:
-        - go get github.com/QCU87Z/device42-go/pkg/device42
+#install:
+#        - go get github.com/QCU87Z/device42-go/pkg/device42
 
 script:
         - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s latest
-#        - go get -t -v ./...
+        - go get -t -v ./...
         - go build -v ./cmd/d42-password/main.go
